--- a/4_1.ipynb
+++ b/4_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNvRG2MA/UE95pWDNKldcZ",
+      "authorship_tag": "ABX9TyN2EdPmJX2mc9mVlHlkvL6N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,7 @@
         "        return x * (1 - x)\n",
         "    return 1 / (1 + np.exp(-x))\n",
         "\n",
+        "#входные и выходные данные подразумевают исключающее или\n",
         "# набор входных данных\n",
         "X = np.array([[0, 0],\n",
         "              [0, 1],\n",
@@ -50,7 +51,7 @@
         "# сделаем случайные числа более определенными\n",
         "np.random.seed(1)\n",
         "\n",
-        "# инициализируем веса случайным образом со средним 0\n",
+        "# инициализируем веса случайным образом со средним 0 в диапазоне(-1,1)\n",
         "syn0 = 2 * np.random.random((2, 1)) - 1\n",
         "\n",
         "for iter in range(10000):\n",
@@ -83,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tnkM8p2EFzB3",
-        "outputId": "7b473a81-2f4f-41b4-bfb4-ecd133bd6c5a"
+        "outputId": "693906b0-b632-4a35-8674-a29c115eef9d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,16 +105,120 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Сравнение l1 после первой итерации и после последней:\n",
+        "#Задание 1\n",
+        "import numpy as np\n",
         "\n",
-        "После первой итерации l1 содержит предсказанные значения, которые инициализированы случайными весами. Эти значения могут быть далеки от истинных значений y, поэтому начальная ошибка будет высокой.\n",
+        "# Сигмоида\n",
+        "def nonlin(x, deriv=False):\n",
+        "    if deriv:\n",
+        "        return x * (1 - x)\n",
+        "    return 1 / (1 + np.exp(-x))\n",
         "\n",
-        "После множества итераций, когда нейронная сеть обучается, l1 будет содержать более точные предсказания, и ошибка будет уменьшаться с каждой итерацией."
+        "#входные и выходные данные подразумевают что результат совпадает с первым столбцом\n",
+        "# набор входных данных\n",
+        "X = np.array([[0, 0],\n",
+        "              [0, 1],\n",
+        "              [1, 0],\n",
+        "              [1, 1]])\n",
+        "\n",
+        "# выходные данные\n",
+        "y = np.array([[0, 0, 1, 1]]).T\n",
+        "\n",
+        "# сделаем случайные числа более определенными\n",
+        "np.random.seed(1)\n",
+        "\n",
+        "# инициализируем веса случайным образом со средним 0 в диапазоне(-1,1)\n",
+        "syn0 = 2 * np.random.random((2, 1)) - 1\n",
+        "\n",
+        "for iter in range(10000):\n",
+        "    # прямое распространение\n",
+        "    l0 = X\n",
+        "    l1 = nonlin(np.dot(l0, syn0))\n",
+        "\n",
+        "    # насколько мы ошиблись?\n",
+        "    l1_error = y - l1\n",
+        "\n",
+        "    # перемножим это с наклоном сигмоиды на основе значений в l1\n",
+        "    l1_delta = l1_error * nonlin(l1, True)  # !!! - производная сигмоидной функции nonlin\n",
+        "    # используется при вычислении l1_delta в процессе обратного распространения ошибки (backpropagation).\n",
+        "\n",
+        "    # обновим веса\n",
+        "    \"\"\"\n",
+        "    выполняет матричное умножение между транспонированной матрицей l0 и матрицей ошибок l1_delta.\n",
+        "    Результатом этого умножения будет матрица весовых обновлений,\n",
+        "    где каждый элемент представляет собой вклад конкретного признака в изменение веса.\n",
+        "    \"\"\"\n",
+        "    syn0 += np.dot(l0.T, l1_delta)\n",
+        "\n",
+        "print(\"Выходные данные после тренировки:\")\n",
+        "print(l1)\n",
+        "print('Веса:')\n",
+        "print(syn0)\n"
       ],
       "metadata": {
-        "id": "cRtgK9fhIkUC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4BbzeuIq-buf",
+        "outputId": "82c25492-cc5a-47a8-9fa1-6ad0a30e3dc5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Выходные данные после тренировки:\n",
+            "[[0.5       ]\n",
+            " [0.01253477]\n",
+            " [0.99986896]\n",
+            " [0.98978102]]\n",
+            "Веса:\n",
+            "[[ 8.93997576]\n",
+            " [-4.36668704]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "не очень хорошие выходные реззультаты"
+      ],
+      "metadata": {
+        "id": "6ow7m4CW-29y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YukdV0ie-2kU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*результат задания 2* получился довольно хороший за счёт появления скрытого слоя с 7,8 нейронами\n",
+        "Error:0.4994800947259584\n",
+        "l2:[[0.00510093]\n",
+        " [0.99168975]\n",
+        " [0.99126444]\n",
+        " [0.0069945 ]]\n",
+        "\n",
+        "в случае 1-6 нейронов плохой результат\n",
+        "Error:0.4995289647766772\n",
+        "l2:[[0.49553727]\n",
+        " [0.49628491]\n",
+        " [0.4987933 ]\n",
+        " [0.49892142]]\n"
+      ],
+      "metadata": {
+        "id": "Uw3qcjMf_8ba"
       }
     },
     {
@@ -140,11 +245,11 @@
         "\n",
         "np.random.seed(1)\n",
         "\n",
-        "# случайно инициализируем веса, в среднем - 0\n",
-        "syn0 = 2 * np.random.random((2,108)) - 1\n",
-        "syn1 = 2 * np.random.random((108,1)) - 1\n",
+        "# случайно инициализируем веса, в среднем - 0, на скрытом слое 4 нейрона\n",
+        "syn0 = 2 * np.random.random((2,4)) - 1\n",
+        "syn1 = 2 * np.random.random((4,1)) - 1\n",
         "\n",
-        "for j in range(60000):\n",
+        "for j in range(10000):\n",
         "    # проходим вперёд по слоям 0, 1 и 2\n",
         "    l0 = X\n",
         "    l1 = nonlin(np.dot(l0, syn0))\n",
@@ -170,35 +275,48 @@
         "\n",
         "    syn1 += l1.T.dot(l2_delta)\n",
         "    syn0 += l0.T.dot(l1_delta)\n",
-        "print(\"l2:\" + str( l2))\n",
-        "\n"
+        "print(\"l2:\" + str( l2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ZD7Y2kOwL85R",
-        "outputId": "16730ee7-842d-45fb-b137-227f318c6ceb"
+        "id": "0xqz_p7WAWM5",
+        "outputId": "4ff6dd83-7cda-44e7-eaed-c6c50a3a4d9a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Error:0.5000029500620907\n",
-            "Error:0.0503854262809494\n",
-            "Error:0.010754330549226608\n",
-            "Error:0.01673230065871268\n",
-            "Error:0.0037985499516080155\n",
-            "Error:0.003790602354747533\n",
-            "l2:[[7.00675622e-04]\n",
-            " [9.98069221e-01]\n",
-            " [9.98090749e-01]\n",
-            " [1.57751831e-03]]\n"
+            "Error:0.4995289647766772\n",
+            "l2:[[0.49553727]\n",
+            " [0.49628491]\n",
+            " [0.4987933 ]\n",
+            " [0.49892142]]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "в случае 2 скрытых слоёв результат получается хорошим при 4 и 2 нейронах на них соответственно\n",
+        "Error:0.5000826823194491\n",
+        "Error:0.49998310863771056\n",
+        "Error:0.003015131544639153\n",
+        "Error:0.0008530598886112963\n",
+        "Error:0.001191402410640795\n",
+        "Error:0.000531551146049807\n",
+        "l3:[[3.13671307e-04]\n",
+        " [9.99902353e-01]\n",
+        " [9.99824419e-01]\n",
+        " [6.03064499e-05]]"
+      ],
+      "metadata": {
+        "id": "3_zEMs_KCLjV"
+      }
     },
     {
       "cell_type": "code",
@@ -264,9 +382,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wrvxrBzCWfRG",
-        "outputId": "1f59fca1-2c8f-4da0-e3a8-7ecb556d7893"
+        "outputId": "84652a85-5d76-489d-a74d-c41209d1feff"
       },
-      "execution_count": 27,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,89 +400,6 @@
             " [9.99902353e-01]\n",
             " [9.99824419e-01]\n",
             " [6.03064499e-05]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#6 нейронов, добавила нормализацию данных\n",
-        "import numpy as np\n",
-        "\n",
-        "def nonlin(x, deriv=False):\n",
-        "    if deriv:\n",
-        "        return nonlin(x) * (1 - nonlin(x))\n",
-        "    return 1 / (1 + np.exp(-x))\n",
-        "\n",
-        "X = np.array([[0, 0, 1],\n",
-        "              [0, 1, 1],\n",
-        "              [1, 0, 1],\n",
-        "              [1, 1, 1]])\n",
-        "\n",
-        "y = np.array([[0],\n",
-        "              [1],\n",
-        "              [1],\n",
-        "              [0]])\n",
-        "\n",
-        "# Нормализуем данные\n",
-        "mean = np.mean(X, axis=0)\n",
-        "stddev = np.std(X, axis=0)\n",
-        "stddev[stddev == 0] = 1  # Заменяем нулевые стандартные отклонения на 1, чтобы избежать деления на ноль\n",
-        "X = (X - mean) / stddev\n",
-        "\n",
-        "\n",
-        "np.random.seed(1)\n",
-        "\n",
-        "# случайно инициализируем веса, в среднем - 0\n",
-        "syn0 = 2 * np.random.random((3, 4)) - 1\n",
-        "syn1 = 2 * np.random.random((4, 6)) - 1\n",
-        "\n",
-        "for j in range(60000):\n",
-        "    # проходим вперёд по слоям 0, 1 и 2\n",
-        "    l0 = X\n",
-        "    l1 = nonlin(np.dot(l0, syn0))\n",
-        "    l2 = nonlin(np.dot(l1, syn1))\n",
-        "\n",
-        "    # как сильно мы ошиблись относительно нужной величины?\n",
-        "    l2_error = y - l2\n",
-        "\n",
-        "    if (j % 10000) == 0:\n",
-        "        print(\"Error:\" + str(np.mean(np.abs(l2_error))))\n",
-        "\n",
-        "    # в какую сторону нужно двигаться?\n",
-        "    # если мы были уверены в предсказании, то сильно менять его не надо\n",
-        "    l2_delta = l2_error * nonlin(l2, deriv=True)\n",
-        "\n",
-        "    # как сильно значения l1 влияют на ошибки в l2?\n",
-        "    l1_error = l2_delta.dot(syn1.T)\n",
-        "\n",
-        "    # в каком направлении нужно двигаться, чтобы прийти к l1?\n",
-        "    # если мы были уверены в предсказании, то сильно менять его не надо\n",
-        "    l1_delta = l1_error * nonlin(l1, deriv=True)\n",
-        "\n",
-        "    syn1 += l1.T.dot(l2_delta)\n",
-        "    syn0 += l0.T.dot(l1_delta)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KHwC0vptQoJL",
-        "outputId": "2b0399a5-bef6-4704-d7bd-5985b53bea79"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Error:0.499647548050463\n",
-            "Error:0.5000000000219412\n",
-            "Error:0.5000000000575361\n",
-            "Error:0.500000000080754\n",
-            "Error:0.5000000001124231\n",
-            "Error:0.5000000001547095\n"
           ]
         }
       ]
